--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "core-js": "3.6.5",
     "rollup": "2.11.0",
     "rollup-plugin-babel": "4.4.0",
+    "rollup-plugin-hot": "^0.0.27",
     "rollup-plugin-livereload": "1.3.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-svelte": "5.2.2",
-    "rollup-plugin-svelte-hot": "^0.8.0",
+    "rollup-plugin-svelte-hot": "^0.9.0",
     "rollup-plugin-terser": "6.1.0",
     "svelte": "3.23.0"
   },
   "dependencies": {
-    "sirv-cli": "0.4.6"
+    "sirv-cli": "0.4.6",
+    "tauri": "^0.6.2"
   }
 }
