--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "scripts": {
-    "start": "sirv public",
-    "dev": "rollup -c -w",
     "build": "rollup -c",
-    "test": "echo \"No test specified\" && exit 0",
+    "dev": "rollup -c -w",
+    "start": "sirv public",
     "tauri:prod": "tauri",
     "tauri:source": "node ../../../../cli/tauri.js/bin/tauri",
     "tauri:source:init": "yarn tauri:source init --tauriPath ../../../../tauri",
@@ -16,21 +15,17 @@
     "tauri:prod:build": "yarn tauri:prod build"
   },
   "devDependencies": {
-    "@babel/core": "7.10.1",
-    "@babel/preset-env": "7.10.1",
     "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "8.0.0",
-    "core-js": "3.6.5",
-    "rollup": "2.11.0",
-    "rollup-plugin-babel": "4.4.0",
-    "rollup-plugin-livereload": "1.3.0",
-    "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-svelte": "5.2.2",
-    "rollup-plugin-svelte-hot": "^0.8.0",
-    "rollup-plugin-terser": "6.1.0",
-    "svelte": "3.23.0"
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-hot": "^0.0.28",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-svelte-hot": "^0.9.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "0.4.6"
+    "sirv-cli": "^0.4.4"
   }
 }
